# cantorDB

./: .gitignore  APIReference.md  CMakeLists.txt  LICENSE  README.md  SeQLGuide.md  TODO.md
datasets/: periodic_table.cdb  periodic_table.cpp
rcantordb/: DESCRIPTION  NAMESPACE
rcantordb/R/: RcppExports.R  cantordb.R
rcantordb/src/: Makevars.win  RcppExports.cpp  rcantordb.cpp
src/cantordb/: cantordb.cpp  cantordb.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h
tests/: test_cantordb.cpp  test_clothing_chain.cpp  test_clothing_chain_full.cpp  test_destructor_stress.cpp  test_hzri_stress.cpp  test_parser.cpp  test_stress.cpp
